// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`betterer should throws when reading the results file fails 1`] = `
Array [
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 ",
  " ☀️  betterer  erro  🔥  - ",
  "could not read results from \\"<project>/fixtures/test-betterer-failed-reading/.betterer.results\\". 😔",
]
`;

exports[`betterer should work when a test fails 1`] = `
Array [
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 ",
  " ☀️  betterer  info  💬  - ",
  "running \\"throws error\\"!",
  "Error: OH NO!",
  " ☀️  betterer  erro  🔥  - ",
  "\\"throws error\\" failed to run. 🔥",
  " ☀️  betterer  info  💬  - ",
  "0 tests got checked. 🤔",
  " ☀️  betterer  erro  🔥  - ",
  "1 test failed to run. 🔥",
]
`;

exports[`betterer should work when a test fails 2`] = `"// BETTERER RESULTS V2."`;
